// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`LinkWithIcon component > renders LeftIcon when provided 1`] = `
<div>
  <a
    class="link link--gray link--icon"
    data-testid="routerLinkTestId"
    href="/"
    rel="noopener noreferrer"
    target="_blank"
  >
    <svg
      data-testid="leftIconLinkTestId"
      fill="currentColor"
      height="1em"
      stroke="currentColor"
      stroke-width="0"
      viewBox="0 0 24 24"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M0 0h24v24H0V0z"
        fill="none"
      />
      <path
        d="M15.41 16.59 10.83 12l4.58-4.59L14 6l-6 6 6 6 1.41-1.41z"
      />
    </svg>
    Click
  </a>
</div>
`;

exports[`LinkWithIcon component > renders RightIcon when provided 1`] = `
<div>
  <a
    class="link link--gray link--icon"
    data-testid="routerLinkTestId"
    href="/"
    rel="noopener noreferrer"
    target="_blank"
  >
    Click
    <svg
      data-testid="rightIconLinkTestId"
      fill="currentColor"
      height="1em"
      stroke="currentColor"
      stroke-width="0"
      viewBox="0 0 24 24"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M0 0h24v24H0V0z"
        fill="none"
      />
      <path
        d="M8.59 16.59 13.17 12 8.59 7.41 10 6l6 6-6 6-1.41-1.41z"
      />
    </svg>
  </a>
</div>
`;

exports[`LinkWithIcon component > renders both LeftIcon and RightIcon when provided 1`] = `
<div>
  <a
    class="link link--gray link--icon"
    data-testid="routerLinkTestId"
    href="/"
    rel="noopener noreferrer"
    target="_blank"
  >
    <svg
      data-testid="leftIconLinkTestId"
      fill="currentColor"
      height="1em"
      stroke="currentColor"
      stroke-width="0"
      viewBox="0 0 24 24"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M0 0h24v24H0V0z"
        fill="none"
      />
      <path
        d="M15.41 16.59 10.83 12l4.58-4.59L14 6l-6 6 6 6 1.41-1.41z"
      />
    </svg>
    Click
    <svg
      data-testid="rightIconLinkTestId"
      fill="currentColor"
      height="1em"
      stroke="currentColor"
      stroke-width="0"
      viewBox="0 0 24 24"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M0 0h24v24H0V0z"
        fill="none"
      />
      <path
        d="M8.59 16.59 13.17 12 8.59 7.41 10 6l6 6-6 6-1.41-1.41z"
      />
    </svg>
  </a>
</div>
`;

exports[`LinkWithIcon component > renders component correctly 1`] = `
<div>
  <a
    class="link link--gray link--icon"
    data-testid="routerLinkTestId"
    href="/"
    rel="noopener noreferrer"
    target="_blank"
  >
    Link
  </a>
</div>
`;

exports[`LinkWithIcon component renders LeftIcon when provided 1`] = `
<div>
  <a
    class="link link--gray link--icon"
    data-testid="routerLinkTestId"
    href="/"
    rel="noopener noreferrer"
    target="_blank"
  >
    <svg
      data-testid="leftIconLinkTestId"
      fill="currentColor"
      height="1em"
      stroke="currentColor"
      stroke-width="0"
      viewBox="0 0 24 24"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M0 0h24v24H0V0z"
        fill="none"
      />
      <path
        d="M15.41 16.59 10.83 12l4.58-4.59L14 6l-6 6 6 6 1.41-1.41z"
      />
    </svg>
    Click
  </a>
</div>
`;

exports[`LinkWithIcon component renders RightIcon when provided 1`] = `
<div>
  <a
    class="link link--gray link--icon"
    data-testid="routerLinkTestId"
    href="/"
    rel="noopener noreferrer"
    target="_blank"
  >
    Click
    <svg
      data-testid="rightIconLinkTestId"
      fill="currentColor"
      height="1em"
      stroke="currentColor"
      stroke-width="0"
      viewBox="0 0 24 24"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M0 0h24v24H0V0z"
        fill="none"
      />
      <path
        d="M8.59 16.59 13.17 12 8.59 7.41 10 6l6 6-6 6-1.41-1.41z"
      />
    </svg>
  </a>
</div>
`;

exports[`LinkWithIcon component renders both LeftIcon and RightIcon when provided 1`] = `
<div>
  <a
    class="link link--gray link--icon"
    data-testid="routerLinkTestId"
    href="/"
    rel="noopener noreferrer"
    target="_blank"
  >
    <svg
      data-testid="leftIconLinkTestId"
      fill="currentColor"
      height="1em"
      stroke="currentColor"
      stroke-width="0"
      viewBox="0 0 24 24"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M0 0h24v24H0V0z"
        fill="none"
      />
      <path
        d="M15.41 16.59 10.83 12l4.58-4.59L14 6l-6 6 6 6 1.41-1.41z"
      />
    </svg>
    Click
    <svg
      data-testid="rightIconLinkTestId"
      fill="currentColor"
      height="1em"
      stroke="currentColor"
      stroke-width="0"
      viewBox="0 0 24 24"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M0 0h24v24H0V0z"
        fill="none"
      />
      <path
        d="M8.59 16.59 13.17 12 8.59 7.41 10 6l6 6-6 6-1.41-1.41z"
      />
    </svg>
  </a>
</div>
`;

exports[`LinkWithIcon component renders component correctly 1`] = `
<div>
  <a
    class="link link--gray link--icon"
    data-testid="routerLinkTestId"
    href="/"
    rel="noopener noreferrer"
    target="_blank"
  >
    Link
  </a>
</div>
`;
